--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "150657373-nikolajve/laravel-exception-analyzer": "dev-main",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "C:\\Datamatiker\\phpStorm\\Laravel-exception-analyzer-final",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/boost": "^1.8",
@@ -86,6 +96,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
